# cmake_udemy

./: .gitignore  Dockerfile  README.md
2_CMake/03_IntermediateProject/: CMakeLists.txt
2_CMake/03_IntermediateProject/app/: CMakeLists.txt
2_CMake/03_IntermediateProject_2/: CMakeLists.txt
2_CMake/03_IntermediateProject_2/src/my_lib/: CMakeLists.txt
2_CMake/05_ConfigureFile/app/: CMakeLists.txt  main.cc
2_CMake/05_ConfigureFile/configured/: CMakeLists.txt  config.hpp.in
2_CMake/05_ConfigureFile/src/my_lib/: CMakeLists.txt
